# Coined-Quantum-Walks

./: .gitignore  README.md  pyproject.toml  template.sh
HPC_jobs/: README.md
HPC_jobs/1D_jobs/: 1D_PV_job.sh  1D_SF_job.sh
SLURM_jobs/: README.md
SLURM_jobs/1D_jobs/: 1D_EE_job.sh  1D_walk_job.sh
SLURM_jobs/2D_jobs/: 2D_SF_job.sh
output/: README.md
plotters/: PV_plot.py
plotters/1D_plotting/: 1D_EE_Plot.py  1D_Probs_Plot.py  1D_SF_Plot.py  PP_plot.py
plotters/2D_plotting/: 2D_EE_Plot.py  2D_Probs_Plot.py  2D_SF_Plot.py  PP_plot.py
plotters/3D_plotting/: 3D_Probs_Plot.py  EE_plot.py  PP_Plot_final.py  PP_plot.py
src/: README.md
src/CQW_1D/: 1D_PV.py  1D_walk.py  HadamardDistributions.py
src/CQW_1D/Misc/: DisorderedSim.py  EE.py  EntanglementEntropy.py  HadamardSim.py  ParticipationValue.py  SF.py  SF_plot.py  StateFidelity.py
src/CQW_1D/Simulators/: PP_optimised.py
src/CQW_2D /: 2D_PV.py
src/CQW_2D /Misc/: 2d walk.py
src/CQW_2D /Simulators/: 2D_PP_Optimized_Adam.py  PD.py  PP_optimised.py
src/CQW_3D/: 3D disordered measure.py  3D disordered.py  3D hadamard.py  3D_PP_OPt2.py  3D_PP_optimised_Adam.py  3D_PV.py  PP_optimised.py  optimisedpp.py
src/ensemble/: reminder.txt
src/observables/: __init__.py  entropy.py  fidelity.py  participation.py
src/operators/: __init__.py  coins.py  shifts.py
tests/: test_dummy.py
